--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,10 +17,10 @@ const baseUrl = import.meta.env.BASE_URL;
 				</div>
 				<div class="app-buttons">
 					<a href="#" class="app-button">
-						<img src="https://play.google.com/intl/en_us/badges/static/images/badges/es_badge_web_generic.png" alt="Google Play">
+						<img src={`${import.meta.env.BASE_URL}/vectors/google_play_badge.svg`} alt="Google Play" class="store-badge">
 					</a>
 					<a href="#" class="app-button">
-						<img src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-example-preferred.png" alt="App Store">
+						<img src={`${import.meta.env.BASE_URL}/vectors/apple_badge.svg`} alt="App Store" class="store-badge">
 					</a>
 				</div>
 			</div>
@@ -56,7 +56,6 @@ const baseUrl = import.meta.env.BASE_URL;
 		position: absolute;
 		top: 20%;
 		left: 10%;
-		background-color: white;
 		padding: 2rem;
 		width: 330px;
 		box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -64,9 +63,12 @@ const baseUrl = import.meta.env.BASE_URL;
 		flex-direction: column;
 		align-items: center;
 		text-align: center;
-		border: .5rem solid;
-		border-image: linear-gradient(45deg, var(--primary-blue), var(--primary-blue), var(--primary-blue), transparent) 1;
+		border: 4px solid transparent;
 		border-radius: 30px;
+		background-image: linear-gradient(white, white), linear-gradient(250deg, var(--primary-blue), var(--primary-blue), transparent);
+		background-origin: border-box;
+		background-clip: padding-box, border-box;
+		background-color: white;
 	}
 
 	.card-logo {
@@ -134,6 +136,7 @@ const baseUrl = import.meta.env.BASE_URL;
 
 	.app-button img {
 		max-width: 240px;
+		width: 100%;
 		height: auto;
 	}
 
