--- a/src/components/Stations.astro
+++ b/src/components/Stations.astro
@@ -10,9 +10,7 @@
 		
 		<div class="stations-content">
 			<div class="map-container">
-				<div class="map-placeholder">
-					[MAPA INTERACTIVO]
-				</div>
+				<iframe src="https://www.google.com/maps/d/u/2/embed?mid=1D9laS1EMCV728UfVVv5fj0LgdpQgdZ8&ehbc=2E312F&noprof=1" width="100%" height="600px"></iframe>
 			</div>
 			
 			<!-- <div class="stations-stats">
