feat: add animated card transitions and adjust header height in carousel component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@ const baseUrl = import.meta.env.BASE_URL;
 		left: 0;
 		right: 0;
 		z-index: 1000;
-		height: 10vh;
+		height: 12vh;
 	}
 
 	.container {
@@ -83,6 +83,6 @@ const baseUrl = import.meta.env.BASE_URL;
 
 	/* Add space for fixed header */
 	:global(body) {
-		padding-top: 80px;
+		padding-top: 12vh;
 	}
 </style>
